--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Collections\BlockingQueue.cs" />
     <Compile Include="Collections\ImmutableList.cs" />
     <Compile Include="Collections\ShufflingType.cs" />
+    <Compile Include="Collections\TestParallelList.cs" />
     <Compile Include="Collections\TreeTraversalType.cs" />
     <Compile Include="Collections\CollectionDebugView.cs" />
     <Compile Include="Collections\ConcurrentCollection.cs" />
@@ -285,7 +286,8 @@
     <Compile Include="Extensions\Utility.cs" />
     <Compile Include="Extensions\WaitTime.cs" />
     <Compile Include="Extensions\XMLExtensions.cs" />
-    <Compile Include="Gaming\Class1.cs" />
+    <Compile Include="Gaming\PlayingCards\FaceValues.cs" />
+    <Compile Include="Gaming\PlayingCards\Suites.cs" />
     <Compile Include="Geometry\DD\GeometryEx.cs" />
     <Compile Include="Geometry\DD\Intersection.cs" />
     <Compile Include="Geometry\DD\Line.cs" />
@@ -297,8 +299,8 @@
     <Compile Include="Geometry\Matrix4.cs" />
     <Compile Include="Geometry\Vector3.cs" />
     <Compile Include="Graphics\Images.cs" />
-    <Compile Include="Gaming\Card.cs" />
-    <Compile Include="Gaming\Deck.cs" />
+    <Compile Include="Gaming\PlayingCards\Card.cs" />
+    <Compile Include="Gaming\PlayingCards\Deck.cs" />
     <Compile Include="Gaming\DiceCup.cs" />
     <Compile Include="Gaming\TraditionalDice.cs" />
     <Compile Include="IO\CopyProgressCallbackReason.cs" />
