--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -306,7 +306,7 @@
     <Compile Include="IO\CopyProgressCallbackReason.cs" />
     <Compile Include="IO\CopyProgressResult.cs" />
     <Compile Include="IO\MoveFileFlags.cs" />
-    <Compile Include="IO\WindowsAPIs.cs" />
+    <Compile Include="IO\WindowsAPI.cs" />
     <Compile Include="Magic\AutofacContainer.cs" />
     <Compile Include="Magic\IIocContainer.cs" />
     <Compile Include="Magic\Ioc.cs" />
