--- a/packages.config
+++ b/packages.config
@@ -8,7 +8,9 @@
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
+  <package id="ManagedEsent" version="1.9.1.0" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.2.1" targetFramework="net451" />
+  <package id="Microsoft.Database.Collections.Generic" version="1.9.1.0" targetFramework="net451" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.20" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net451" />
