--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Extensions\PopulateProgressEventArgs.cs" />
     <Compile Include="Extensions\RegistryServer.cs" />
     <Compile Include="Extensions\Search.cs" />
+    <Compile Include="Extensions\SearchStyle.cs" />
     <Compile Include="Extensions\Strings.cs" />
     <Compile Include="Extensions\SynchronizeInvokeExtensions.cs" />
     <Compile Include="Extensions\Types.cs" />
