--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -325,6 +325,7 @@
     <Compile Include="Gaming\TraditionalDice.cs" />
     <Compile Include="IO\Compression\RandomnessFeeeding.cs" />
     <Compile Include="IO\Compression\RandomnessTest.cs" />
+    <Compile Include="IO\Streams\StreamString.cs" />
     <Compile Include="IO\Streams\ContainerStream.cs" />
     <Compile Include="IO\CopyProgressCallbackReason.cs" />
     <Compile Include="IO\CopyProgressResult.cs" />
