--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -88,6 +88,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\AIBrain\packages\FluentAssertions.3.1.229\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
+    <Reference Include="ImpromptuInterface">
+      <HintPath>..\AIBrain\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
+    </Reference>
     <Reference Include="MathNet.Numerics">
       <HintPath>..\Universal\packages\MathNet.Numerics.3.2.1\lib\net40\MathNet.Numerics.dll</HintPath>
     </Reference>
@@ -334,11 +337,17 @@
     <Compile Include="IO\Streams\ProgressStream.cs" />
     <Compile Include="IO\SearchStyle.cs" />
     <Compile Include="IO\WindowsAPI.cs" />
+    <Compile Include="Magic\Abodit\IId.cs" />
+    <Compile Include="Magic\Abodit\SimpleDocument.cs" />
     <Compile Include="Magic\AutofacContainer.cs" />
     <Compile Include="Magic\BetterDisposableClass.cs" />
+    <Compile Include="Magic\Abodit\MongoDynamicBsonSerializer.cs" />
+    <Compile Include="Magic\Abodit\MongoDynamic.cs" />
+    <Compile Include="Magic\Abodit\MongoDynamicSerializationProvider.cs" />
     <Compile Include="Magic\IIocContainer.cs" />
     <Compile Include="Magic\Ioc.cs" />
     <Compile Include="Magic\MagicExtensions.cs" />
+    <Compile Include="Magic\Abodit\MagicModule.cs" />
     <Compile Include="Magic\ManagedDisposable.cs" />
     <Compile Include="Magic\NativeDisposable.cs" />
     <Compile Include="Magic\NinjectIocContainer.cs" />
