--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
+  <package id="ImpromptuInterface" version="6.2.2" targetFramework="net451" />
   <package id="ManagedEsent" version="1.9.1.0" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.2.1" targetFramework="net451" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.1.0" targetFramework="net451" />
