--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -153,6 +153,7 @@
     <Reference Include="System.Data.SqlXml" />
     <Reference Include="System.Design" />
     <Reference Include="System.Device" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
@@ -326,7 +327,7 @@
     <Compile Include="Gaming\PlayingCards\Deck.cs" />
     <Compile Include="Gaming\DiceCup.cs" />
     <Compile Include="Gaming\TraditionalDice.cs" />
-    <Compile Include="Internet\Class1.cs" />
+    <Compile Include="Internet\NetworkBrowser.cs" />
     <Compile Include="IO\Compression\RandomnessFeeeding.cs" />
     <Compile Include="IO\Compression\RandomnessTest.cs" />
     <Compile Include="IO\Streams\StreamString.cs" />
