--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -327,6 +327,11 @@
     <Compile Include="Gaming\PlayingCards\Deck.cs" />
     <Compile Include="Gaming\DiceCup.cs" />
     <Compile Include="Gaming\TraditionalDice.cs" />
+    <Compile Include="Internet\WebClientExtensions.cs" />
+    <Compile Include="Internet\SmtpClientExtensions.cs" />
+    <Compile Include="Internet\EAPCommon.cs" />
+    <Compile Include="Internet\InternetExtensions.cs" />
+    <Compile Include="Internet\PingExtensions.cs" />
     <Compile Include="Internet\NetworkBrowser.cs" />
     <Compile Include="IO\Compression\RandomnessFeeeding.cs" />
     <Compile Include="IO\Compression\RandomnessTest.cs" />
