--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -484,6 +484,7 @@
     <Compile Include="Persistence\PersistableSettings.cs" />
     <Compile Include="Persistence\PersistedDatabase.cs" />
     <Compile Include="Persistence\PersistTable.cs" />
+    <Compile Include="Persistence\SerializationExtensions.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
