--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="Clojure" version="1.5.0.2" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="DawgSharp" version="1.0.5" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net451" />
   <package id="ManagedEsent" version="1.9.1.0" targetFramework="net451" />
