--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -566,6 +566,7 @@
     <Compile Include="Threading\AbandonableTask.cs" />
     <Compile Include="Security\MersenneTwister.cs" />
     <Compile Include="Threading\ActorExtensions.cs" />
+    <Compile Include="Threading\Volatile.cs" />
     <Compile Include="Threading\ParallelAlgorithms.cs" />
     <Compile Include="Threading\CustomAttribute.cs" />
     <Compile Include="Extensions\Combiner.cs" />
