--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -336,6 +336,7 @@
     <Compile Include="Gaming\PlayingCards\Deck.cs" />
     <Compile Include="Gaming\GameContainer.cs" />
     <Compile Include="Gaming\Dice.cs" />
+    <Compile Include="Internet\Captcha.cs" />
     <Compile Include="Internet\CaptchaSite.cs" />
     <Compile Include="Internet\CaptchaStatus.cs" />
     <Compile Include="Internet\HTMLExtensions.cs" />
@@ -500,6 +501,7 @@
     <Compile Include="Linguistics\Book.cs" />
     <Compile Include="Linguistics\Page.cs" />
     <Compile Include="Misc\ProductExampleClass.cs" />
+    <Compile Include="Persistence\IPersistTable.cs" />
     <Compile Include="Persistence\PersistableSettings.cs" />
     <Compile Include="Persistence\PersistTable.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
