--- a/packages.config
+++ b/packages.config
@@ -8,12 +8,17 @@
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="FluentAssertions" version="3.2.1" targetFramework="net451" />
+  <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net451" />
+  <package id="FluentSharp.CoreLib" version="5.5.172" targetFramework="net451" />
+  <package id="FluentSharp.NUnit" version="5.5.172" targetFramework="net451" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net451" />
   <package id="ManagedEsent" version="1.9.2.0" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net451" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.23" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
+  <package id="NHibernate" version="4.0.0.4000" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net451" />
